# modern_python

./: .editorconfig  .gitignore  .justfile  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  ruff.toml  shell.nix
.devcontainer/: devcontainer.json
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  python-format.yml
shared/utils/: pyproject.toml
src/: main.py
src/core/: pyproject.toml
tests/: test_foo.py
tests/scripts/: this_test.py
tests/shared/utils/: get_token_test.py
