[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modern_python"
version = "0.0.1"
description = "A template for developing production-ready Python applications."
authors = [
  { name = "Miguel Villa Floran", email = "miguel.villafloran@gmail.com" },
]
requires-python = ">=3.11,<3.14"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = ["utils", "core", "typer>=0.12.5"]

[tool.uv.sources]
utils = { workspace = true }
core = { workspace = true }

[tool.uv.workspace]
members = ["shared/*", "src/*"]

[dependency-groups]
dev = ["pre-commit", "ipykernel", "pytest", "pytest-cov"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["shared", "src"]

[tool.pytest.ini_options]
cache_dir = ".pytest_cache"
pythonpath = [".", "scripts", "src"]
