[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "core"
version = "0.0.0"
description = "Core functionality"
authors = [
  { name = "Miguel Villa Floran", email = "miguel.villafloran@gmail.com" },
]
requires-python = ">=3.12,<3.13"
readme = "README.md"

dependencies = ["utils", "typer>=0.12.5"]

[project.scripts]
core = "core.cli:app"

[tool.uv.sources]
utils = { workspace = true }
